spacing issues worked with

--- a/src/index.css
+++ b/src/index.css
@@ -102,25 +102,29 @@ a:hover {
 
 header {
   font-weight: 100;
-  font-size: 25px;
+  font-size: 40px;
   background: linear-gradient(to right, rgb(69, 80, 126), rgb(29, 20, 50));
   padding: 0.5rem;
   text-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
   justify-content: space-between;
 }
-
+header h2 {
+  padding: 0% 10% 0% 10%;
+}
 header ul {
   display: flex;
   align-items: center;
   flex-direction: row;
   justify-content: space-between;
-  padding: 3px 8% 3px 15%;
+  padding: 0% 15% 0% 15%;
 }
 
 header li a {
-  color: var(--primary-color);
+  /* color: var(--primary-color); */
+  color: rgb(203, 198, 193);
   display: inline;
-  padding: 12px;
+  font-style: italic;
+  font-size: 30px;
 }
 
 header img {
@@ -154,12 +158,13 @@ button[disabled] {
 #portfolio {
   text-align: left;
   padding-left: 65px;
-  background-color: #cdc2c2;
-  background-position-x: 100%;
+  background-color: #cdcac2;
+  margin: 0 0px;
 }
 
 .aboutSection {
-  min-height: 800px;
+  min-height: 600px;
+  display: vertical;
 }
 
 #aboutPhoto {
@@ -175,7 +180,7 @@ button[disabled] {
 
 #summary {
   padding: 0% 2% 0% 3%;
-  display: vertical;
+  
 }
 
 #skillset {
@@ -217,6 +222,11 @@ img {
   box-shadow: 7px 7px 5px 0px rgba(50, 50, 50, 0.75);
 }
 
+#backing{
+  padding: 1% 0% 1% 0%;
+  background-color:rgb(235, 230, 226);
+  margin: 0 0px;
+}
 .projects {
   width: 25%;
   height: 190px;
@@ -320,6 +330,10 @@ nav a:hover {
   text-decoration: none;
 }
 
+nav-item {
+  padding: 0% 15% 0% 15%;
+  margin: 0 0%;
+  }
 nav li {
   cursor: pointer;
 }
